# agentdocker-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench_results.json  bench_setup_only.py  build.rs  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml  docs.yml  publish.yml  scorecard.yml  test.yml
dev/: run.py
dev/support/: README.md  osworld.md  swebench_verified.md  tb2.md
docs/: development.md  quick_start.md  skyrl_integration_test.md  userns_skyrl_fixes.md
examples/: BENCHMARKS.md  basic_usage.py  bench_harbor_e2e.py  bench_osworld_e2e.py  bench_osworld_reset.py  bench_swebench.py  benchmark.md  benchmark.py  benchmark_breakdown.py  micro_benchmark.py  repro_screenshot_500.py  test_fast_reset_e2e.py
examples/results/: swebench_verified.md
go/: go.mod  go.sum  libnitrobox.h
go/cmd/nitrobox-core/: main.go
go/cshared/: exports.go
go/internal/buildkit/: build.go  daemon.go  handler.go  layers.go  rootless.go  server.go
go/internal/cgroup/: cgroup.go
go/internal/checkpoint/: checkpoint.go
go/internal/image/: containerd.go  storage.go
go/internal/imageref/: imageref.go
go/internal/mount/: mount.go
go/internal/nsenter/: nsenter.go
go/internal/pidfd/: pidfd.go
go/internal/proc/: fuser.go
go/internal/qmp/: qmp.go
go/internal/sandbox/: spawn.go
go/internal/unpack/: extract.go
go/internal/userns/: fixup.go
go/internal/whiteout/: whiteout.go
rust/src/: cgroup.rs  init.rs  lib.rs  mount.rs  nsenter.rs  pidfd.rs  proc.rs  qmp.rs  security.rs  unpack.rs  userns.rs  whiteout.rs
scripts/: build_test_vm.py  test_qga_integration.py
src/agentdocker_lite/: __init__.py  _mount.py  _registry.py  _shell.py  checkpoint.py  cli.py  compose.py  rootfs.py  sandbox.py  security.py  vm.py
src/agentdocker_lite/_vendor/: adl-qmp  adl-qmp.c  adl-seccomp  adl-seccomp.c
src/agentdocker_lite/backends/: base.py  rootful.py  rootless.py
src/agentdocker_lite/compose/: _parse.py  _project.py
src/lite_sandbox/: sandbox.py
src/nitrobox/: __init__.py  __main__.py  _backend.py  _core.pyi  _errors.py  _go_core.py  _gobin.py  _registry.py  _shell.py  checkpoint.py  cli.py  config.py  network.py  rootfs.py  sandbox.py  vm.py
src/nitrobox/_vendor/: __init__.py  criu  criu-wrapper  criu_rpc_pb2.py  nbx-qmp  nitrobox-checkpoint-helper  pasta  pasta.avx2
src/nitrobox/_vendor/criu-libs/: libbrotlicommon.so.1  libbrotlidec.so.1  libbrotlienc.so.1  libgmp.so.10  libgnutls.so.30  libhogweed.so.6  libidn2.so.0  libjansson.so.4  libmnl.so.0  libnet.so.9  libnettle.so.8  libnftables.so.1  libnftnl.so.11  libnl-3.so.200  libp11-kit.so.0  libprotobuf-c.so.1  libtasn1.so.6  libunistring.so.5  libz.so.1  libzstd.so.1
src/nitrobox/compose/: __init__.py  _network.py  _parse.py  _project.py
src/nitrobox/image/: __init__.py  buildkit.py  docker.py  layers.py  store.py
src/nitrobox/storage/: overlay.py  whiteout.py
tests/: conftest.py  test_buildkit.py  test_checkpoint.py  test_cli.py  test_compose.py  test_docker_api.py  test_registry.py  test_rust_core.py  test_sandbox.py  test_security.py  test_unpack.py  test_vm.py  test_whiteout.py
