[package]
name = "nitrobox-core"
version = "0.0.6"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Rust core for nitrobox: Linux namespace sandbox syscall interface"

[lib]
name = "nitrobox_core"
crate-type = ["cdylib", "rlib"]  # rlib needed for stub_gen binary
path = "rust/src/lib.rs"

[[bin]]
name = "stub_gen"
path = "rust/src/bin/stub_gen.rs"

[[bin]]
name = "nitrobox-checkpoint-helper"
path = "rust/src/bin/checkpoint_helper.rs"

[dependencies]
pyo3 = "0.28"
pyo3-stub-gen = "0.21"
nix = { version = "0.31", features = [
    "sched",     # unshare, setns
    "mount",     # mount, umount2
    "fs",        # chroot, chdir
    "process",   # fork, setsid, waitpid, Pid
    "signal",    # kill, Signal
    "term",      # tcgetattr, tcsetattr
    "hostname",  # sethostname
    "ioctl",     # ioctl macros for SIOCGIFFLAGS
    "net",       # InterfaceFlags
] }
rustix = { version = "1.1", features = [
    "mount",     # fsopen, fsconfig, fsmount, move_mount (new mount API)
    "thread",    # set_no_new_privs, set_secure_computing_mode, cap_drop
    "process",   # pidfd_open, pidfd_send_signal
    "fs",        # CWD constant for move_mount
] }
libc = "1.0.0-alpha.3"  # process_madvise (no crate covers it), seccomp BPF structs
serde = { version = "1", features = ["derive"] }
serde_json = "1"
container_image_dist_ref = "0.3"
tar = "0.4"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
