[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdocker-lite"
version = "0.0.1"
description = "Lightweight Linux namespace sandbox with persistent shell and instant reset"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentdocker_lite"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentdocker_lite/_vendor/pasta" = "agentdocker_lite/_vendor/pasta"
"src/agentdocker_lite/_vendor/pasta.avx2" = "agentdocker_lite/_vendor/pasta.avx2"
