[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdocker-lite"
version = "0.0.4"
description = "Lightweight Linux namespace sandbox with persistent shell and instant reset"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
readme = "README.md"
keywords = [
    "sandbox",
    "container",
    "namespace",
    "linux",
    "isolation",
    "reinforcement-learning",
    "overlayfs",
    "rootless",
    "checkpoint",
    "criu",
]
authors = [{ name = "Yuzhou Nie" }]
dependencies = ["protobuf>=4.0"]

[project.urls]
Homepage = "https://github.com/opensage-agent/agentdocker-lite"
Repository = "https://github.com/opensage-agent/agentdocker-lite"
"Bug Tracker" = "https://github.com/opensage-agent/agentdocker-lite/issues"
Changelog = "https://github.com/opensage-agent/agentdocker-lite/blob/main/CHANGELOG.md"

[project.scripts]
adl = "agentdocker_lite.cli:main"

[project.optional-dependencies]
compose = ["pyyaml>=6.0"]
dev = ["pytest>=9.0", "pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentdocker_lite"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentdocker_lite/_vendor/pasta" = "agentdocker_lite/_vendor/pasta"
"src/agentdocker_lite/_vendor/pasta.avx2" = "agentdocker_lite/_vendor/pasta.avx2"
"src/agentdocker_lite/_vendor/criu" = "agentdocker_lite/_vendor/criu"
"src/agentdocker_lite/_vendor/adl-seccomp" = "agentdocker_lite/_vendor/adl-seccomp"
